# Clerisy

./: CMakeLists.txt  README.md  appveyor.yml
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/ic_launcher/values/: ic_launcher_background.xml
android/res/drawable/: ic_launcher_foreground.xml
installer/config/: config.xml
rsc/: app.rc  qml.qrc  qtquickcontrols2.conf
rsc/Data/: Artes.json  Atualidades.json  Biologia.json  Espanhol.json  Filosofia.json  Fisica.json  Geografia.json  Historia.json  Ingles.json  Literatura.json  Matematica-Basica.json  Matematica.json  Portugues.json  Quimica.json  Redacao.json  Sociologia.json
rsc/UI/: App.qml  Assuntos.qml  Aulas.qml  Materias.qml  MateriasConteudo.qml  Opcoes.qml  Options.qml  Subject.qml  Subtopic.qml  Topic.qml
rsc/UI/Utilities/: Border.qml  DynamicGrid.qml  Globals.qml  Style.qml  UrlRequest.qml
src/: main.cpp  qmlfile.h
